Incorrect file name for lab report tex files

--- a/.gitignore
+++ b/.gitignore
@@ -46,7 +46,7 @@ Lab_Report/fig22-eps-converted-to.pdf
 Lab_Report/fig23-eps-converted-to.pdf
 Lab_Report/fig24-eps-converted-to.pdf
 Lab_Report/fig25-eps-converted-to.pdf
-Lab_Report/lab_report.aux
-Lab_Report/lab_report.log
-Lab_Report/lab_report.synctex.gz
-Lab_Report/lab_report.toc
+Lab_Report/lab_report_1.aux
+Lab_Report/lab_report_1.log
+Lab_Report/lab_report_1.synctex.gz
+Lab_Report/lab_report_1.toc
