Update: remaining files added

--- a/.gitignore
+++ b/.gitignore
@@ -1,52 +1,4 @@
-Tutorial_1/fig1-eps-converted-to.pdf
-Tutorial_1/fig2-eps-converted-to.pdf
-Tutorial_1/fig3-eps-converted-to.pdf
-Tutorial_1/fig4-eps-converted-to.pdf
-Tutorial_1/tutorial_1.aux
-Tutorial_1/tutorial_1.log
-Tutorial_1/tutorial_1.synctex.gz
-Tutorial_2/fig1-eps-converted-to.pdf
-Tutorial_2/fig2-eps-converted-to.pdf
-Tutorial_2/fig3-eps-converted-to.pdf
-Tutorial_2/fig4-eps-converted-to.pdf
-Tutorial_2/tutorial_2.aux
-Tutorial_2/tutorial_2.log
-Tutorial_2/tutorial_2.synctex.gz
-Tutorial_3/fig1-eps-converted-to.pdf
-Tutorial_3/fig2-eps-converted-to.pdf
-Tutorial_3/fig3-eps-converted-to.pdf
-Tutorial_3/fig4-eps-converted-to.pdf
-Tutorial_3/fig5-eps-converted-to.pdf
-Tutorial_3/fig6-eps-converted-to.pdf
-Tutorial_3/tutorial_3.aux
-Tutorial_3/tutorial_3.log
-Tutorial_3/tutorial_3.synctex.gz
-Lab_Report/fig1-eps-converted-to.pdf
-Lab_Report/fig2-eps-converted-to.pdf
-Lab_Report/fig3-eps-converted-to.pdf
-Lab_Report/fig4-eps-converted-to.pdf
-Lab_Report/fig5-eps-converted-to.pdf
-Lab_Report/fig6-eps-converted-to.pdf
-Lab_Report/fig7-eps-converted-to.pdf
-Lab_Report/fig8-eps-converted-to.pdf
-Lab_Report/fig9-eps-converted-to.pdf
-Lab_Report/fig10-eps-converted-to.pdf
-Lab_Report/fig11-eps-converted-to.pdf
-Lab_Report/fig12-eps-converted-to.pdf
-Lab_Report/fig13-eps-converted-to.pdf
-Lab_Report/fig14-eps-converted-to.pdf
-Lab_Report/fig15-eps-converted-to.pdf
-Lab_Report/fig16-eps-converted-to.pdf
-Lab_Report/fig17-eps-converted-to.pdf
-Lab_Report/fig18-eps-converted-to.pdf
-Lab_Report/fig19-eps-converted-to.pdf
-Lab_Report/fig20-eps-converted-to.pdf
-Lab_Report/fig21-eps-converted-to.pdf
-Lab_Report/fig22-eps-converted-to.pdf
-Lab_Report/fig23-eps-converted-to.pdf
-Lab_Report/fig24-eps-converted-to.pdf
-Lab_Report/fig25-eps-converted-to.pdf
-Lab_Report/lab_report_1.aux
-Lab_Report/lab_report_1.log
-Lab_Report/lab_report_1.synctex.gz
-Lab_Report/lab_report_1.toc
+*.aux
+*.log
+*.synctex.gz
+*.toc
